// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SimpleTextKeyValue > should render the key and the value 1`] = `
<span
  class="_tc-simple-text_5c4f92 tc-simple-text myCLass"
  style="padding: 0px;"
>
  <span
    class="_tc-simple-text-key_5c4f92 tc-simple-text-key _tc-simple-text-key-with-value_5c4f92 tc-simple-text-key-with-value"
  >
    myKey
     : 
  </span>
  <span
    class="_tc-simple-text-value_5c4f92 tc-simple-text-value"
  >
    myValue
  </span>
</span>
`;

exports[`SimpleTextKeyValue should render the key and the value 1`] = `
<span
  class="theme-tc-simple-text tc-simple-text myCLass"
  style="padding: 0px;"
>
  <span
    class="theme-tc-simple-text-key tc-simple-text-key theme-tc-simple-text-key-with-value tc-simple-text-key-with-value"
  >
    myKey
     : 
  </span>
  <span
    class="theme-tc-simple-text-value tc-simple-text-value"
  >
    myValue
  </span>
</span>
`;
